--- a/price.html
+++ b/price.html
@@ -11,7 +11,7 @@
   </head>
   <body class="page inner-page">
     <header class="page-header">
-      <nav class="page-header__nav">
+      <nav class="page-header__nav content-layout">
         <a class="page-header__logo" href="index.html" aria-label="Логотип">
           <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
@@ -39,7 +39,7 @@
         </ul>
       </nav>
     </header>
-    <main class="container container-inner">
+    <main class="content-layout content-inner">
       <h1 class="content-header__headline headline">Прайс-лист</h1>
       <ul class="breadcrumbs__list">
         <li class="breadcrumbs__item">
@@ -50,44 +50,46 @@
 
       <p class="promo-text">Истинно мужская классика</p>
 
-      <section class="equipment">
-        <h2 class="visually-hidden">Оснащение</h2>
-        <b class="equipment__lid headline-inner">Мы используем только лучшие средства:</b>
-        <ul class="equipment__list">
-          <li class="equipment__item">Baxter of California</li>
-          <li class="equipment__item">Mr Natty</li>
-          <li class="equipment__item">Suavecito</li>
-          <li class="equipment__item">Malin+Goetz</li>
-        </ul>
-      </section>
+      <div class="catalog-columns">
+        <section class="equipment">
+          <h2 class="visually-hidden">Оснащение</h2>
+          <b class="equipment__lid headline-inner">Мы используем только лучшие средства:</b>
+          <ul class="equipment__list">
+            <li class="equipment__item">Baxter of California</li>
+            <li class="equipment__item">Mr Natty</li>
+            <li class="equipment__item">Suavecito</li>
+            <li class="equipment__item">Malin+Goetz</li>
+          </ul>
+        </section>
 
-      <section class="service-price">
-        <h2 class="service-price__headline headline-inner">Цены на услуги наших мастеров:</h2>
-        <table class="service-price__table">
-          <tr class="service-price__table-row">
-            <th class="service-price__table-header">Стрижка</th>
-            <td class="service-price__table-data">1 500 &#8381;</td>
-          </tr>
-          <tr class="service-price__table-row">
-            <th class="service-price__table-header">Стрижка бороды</th>
-            <td class="service-price__table-data">500 &#8381;</td>
-          </tr>
-          <tr class="service-price__table-row">
-            <th class="service-price__table-header">Накрутка усов</th>
-            <td class="service-price__table-data">350 &#8381;</td>
-          </tr>
-        </table>
-      </section>
+        <section class="service-price">
+          <h2 class="service-price__headline headline-inner">Цены на услуги наших мастеров:</h2>
+          <table class="service-price__table">
+            <tr class="service-price__table-row">
+              <th class="service-price__table-header">Стрижка</th>
+              <td class="service-price__table-data">1 500 &#8381;</td>
+            </tr>
+            <tr class="service-price__table-row">
+              <th class="service-price__table-header">Стрижка бороды</th>
+              <td class="service-price__table-data">500 &#8381;</td>
+            </tr>
+            <tr class="service-price__table-row">
+              <th class="service-price__table-header">Накрутка усов</th>
+              <td class="service-price__table-data">350 &#8381;</td>
+            </tr>
+          </table>
+        </section>
 
-      <section class="about-us">
-        <h2 class="about-us__headline headline-inner">Несколько слов о нас:</h2>
-        <p class="about-us__info">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
-      </section>
+        <section class="about-us">
+          <h2 class="about-us__headline headline-inner">Несколько слов о нас:</h2>
+          <p class="about-us__info">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
+        </section>
 
-      <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <p class="advantages__info">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
-      </section>
+        <section class="advantages">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <p class="advantages__info">Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</p>
+        </section>
+      </div>
     </main>
     <footer class="page-footer">
       <p class="page-footer__contacts">
